--- a/fun/conferencemap.ipynb
+++ b/fun/conferencemap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "37c28f34",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "8ca5799f",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
          "type": "string"
         }
        ],
-       "ref": "424d5a9a-55b5-47da-b77d-dd7b91f5e5bb",
+       "ref": "de339206-3ea8-4745-961a-613570809ffa",
        "rows": [
         [
          "0",
@@ -294,7 +294,7 @@
          "11.5789",
          "CMC",
          "2025",
-         "2025-09",
+         "2025-09-03",
          "The 12th International Conference on CMC and Social Media Corpora for the Humanities"
         ],
         [
@@ -305,7 +305,7 @@
          "9.9511",
          "KONVENS",
          "2025",
-         "2025-09",
+         "2025-09-09",
          "Konferenz zur Verarbeitung natürlicher Sprache 2025"
         ]
        ],
@@ -561,7 +561,7 @@
        "      <td>11.5789</td>\n",
        "      <td>CMC</td>\n",
        "      <td>2025</td>\n",
-       "      <td>2025-09</td>\n",
+       "      <td>2025-09-03</td>\n",
        "      <td>The 12th International Conference on CMC and S...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -572,7 +572,7 @@
        "      <td>9.9511</td>\n",
        "      <td>KONVENS</td>\n",
        "      <td>2025</td>\n",
-       "      <td>2025-09</td>\n",
+       "      <td>2025-09-09</td>\n",
        "      <td>Konferenz zur Verarbeitung natürlicher Sprache...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -623,8 +623,8 @@
        "16                    Edge Hill Corpus Research Group  2023  2023-12-01   \n",
        "17  Digital Preservation Toolkit for Community Arc...  2025     2025-02   \n",
        "18                                             CL2025  2025     2025-07   \n",
-       "19                                                CMC  2025     2025-09   \n",
-       "20                                            KONVENS  2025     2025-09   \n",
+       "19                                                CMC  2025  2025-09-03   \n",
+       "20                                            KONVENS  2025  2025-09-09   \n",
        "\n",
        "                                           Full_Title  \n",
        "0              École thématique d'été « Annotations »  \n",
@@ -650,7 +650,7 @@
        "20  Konferenz zur Verarbeitung natürlicher Sprache...  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "d3b94d8c",
    "metadata": {},
    "outputs": [],
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "74bd0b7a",
    "metadata": {},
    "outputs": [
@@ -860,7 +860,7 @@
            "#7b61a7",
            "#7b61a7",
            "#7b61a7",
-           "orange",
+           "#7b61a7",
            "orange"
           ],
           "opacity": 0.55,
@@ -1747,14 +1747,6 @@
     "fig.show()\n",
     "fig.write_html(\"conferencemap.html\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c539cb41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
