more images and conf map fixed

--- a/fun/conferencemap.ipynb
+++ b/fun/conferencemap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "37c28f34",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "8ca5799f",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
          "type": "string"
         }
        ],
-       "ref": "de339206-3ea8-4745-961a-613570809ffa",
+       "ref": "ca0241bb-9bc1-4aac-9691-f6f6ec76d486",
        "rows": [
         [
          "0",
@@ -650,7 +650,7 @@
        "20  Konferenz zur Verarbeitung natürlicher Sprache...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d3b94d8c",
    "metadata": {},
    "outputs": [],
@@ -682,12 +682,13 @@
     "# Merge the grouped data with the original data\n",
     "df = df.merge(df_grouped, on=['Location', 'Latitude', 'Longitude'], suffixes=('', '_grouped'))\n",
     "df = df.merge(df_years, on=['Location', 'Latitude', 'Longitude'], suffixes=('', '_years'))\n",
-    "df['Is_Past'] = df['Date'].apply(lambda x: pd.to_datetime(x) < pd.Timestamp('today'))"
+    "df['Is_Past'] = df['Date'].apply(lambda x: pd.to_datetime(x) < pd.Timestamp('today'))\n",
+    "df['Year_years'] = df['Year_years'].apply(lambda x: ','.join(sorted(set(x.split(',')), key=int)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "74bd0b7a",
    "metadata": {},
    "outputs": [
@@ -718,7 +719,7 @@
           [
            "Lancaster, UK",
            "BAAL Corpus Linguistics SIG Workshop<br> Machine Learning for Humanists<br> CL2023<br> UCREL NLP Summer School 2024<br> Digital Humanities Forum",
-           "2019, 2021, 2023, 2024, 2024"
+           "2019, 2021, 2023, 2024"
           ],
           [
            "Grenoble, France",
@@ -728,7 +729,7 @@
           [
            "Lancaster, UK",
            "BAAL Corpus Linguistics SIG Workshop<br> Machine Learning for Humanists<br> CL2023<br> UCREL NLP Summer School 2024<br> Digital Humanities Forum",
-           "2019, 2021, 2023, 2024, 2024"
+           "2019, 2021, 2023, 2024"
           ],
           [
            "Limerick, Ireland",
@@ -748,7 +749,7 @@
           [
            "Lancaster, UK",
            "BAAL Corpus Linguistics SIG Workshop<br> Machine Learning for Humanists<br> CL2023<br> UCREL NLP Summer School 2024<br> Digital Humanities Forum",
-           "2019, 2021, 2023, 2024, 2024"
+           "2019, 2021, 2023, 2024"
           ],
           [
            "Vigo, Spain",
@@ -758,7 +759,7 @@
           [
            "Lancaster, UK",
            "BAAL Corpus Linguistics SIG Workshop<br> Machine Learning for Humanists<br> CL2023<br> UCREL NLP Summer School 2024<br> Digital Humanities Forum",
-           "2019, 2021, 2023, 2024, 2024"
+           "2019, 2021, 2023, 2024"
           ],
           [
            "Manchester, UK",
@@ -773,7 +774,7 @@
           [
            "Lancaster, UK",
            "BAAL Corpus Linguistics SIG Workshop<br> Machine Learning for Humanists<br> CL2023<br> UCREL NLP Summer School 2024<br> Digital Humanities Forum",
-           "2019, 2021, 2023, 2024, 2024"
+           "2019, 2021, 2023, 2024"
           ],
           [
            "Augsburg, Germany",
@@ -1716,7 +1717,7 @@
     "    hover_data={\n",
     "        'Location': True,\n",
     "        'Event_grouped': True,\n",
-    "        'Year_years': True\n",
+    "        'Year_years': False\n",
     "    },\n",
     "    size='Event Count',\n",
     "    width=800,\n",
@@ -1732,7 +1733,7 @@
     "        color=[ \"#7b61a7\" if x else \"orange\" for x in df[\"Is_Past\"]]\n",
     "    ),\n",
     "    hovertemplate='<b>%{customdata[0]}</b>'+\n",
-    "                  '<br>%{customdata[1]}'+\n",
+    "                  '<br>%{customdata[1]}' +\n",
     "                  '<br>%{customdata[2]}'\n",
     ")\n",
     "\n",
@@ -1747,6 +1748,22 @@
     "fig.show()\n",
     "fig.write_html(\"conferencemap.html\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39aa5494",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7879ab4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
