--- a/fun/conferencemap.ipynb
+++ b/fun/conferencemap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "37c28f34",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8ca5799f",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
          "type": "string"
         }
        ],
-       "ref": "afbe433a-caac-4396-8666-744238916d57",
+       "ref": "691821d0-e34e-47ea-a116-4c3fa5903753",
        "rows": [
         [
          "0",
@@ -348,10 +348,10 @@
         ],
         [
          "22",
-         "Konstanz",
+         "Koblenz",
          "Germany",
-         "47.678",
-         "9.173",
+         "50.3566",
+         "7.75938",
          "ICAME 47",
          "2026",
          "2026-05-26",
@@ -400,7 +400,7 @@
        "      <td>Banyuls-sur-Mer</td>\n",
        "      <td>France</td>\n",
        "      <td>42.4817</td>\n",
-       "      <td>3.1317</td>\n",
+       "      <td>3.13170</td>\n",
        "      <td>École thématique d'été « Annotations »</td>\n",
        "      <td>2022</td>\n",
        "      <td>2022-06-01</td>\n",
@@ -412,7 +412,7 @@
        "      <td>Vilnius</td>\n",
        "      <td>Lithuania</td>\n",
        "      <td>54.6872</td>\n",
-       "      <td>25.2797</td>\n",
+       "      <td>25.27970</td>\n",
        "      <td>ICAME 46</td>\n",
        "      <td>2025</td>\n",
        "      <td>2025-06-01</td>\n",
@@ -424,7 +424,7 @@
        "      <td>Mainz</td>\n",
        "      <td>Germany</td>\n",
        "      <td>49.9929</td>\n",
-       "      <td>8.2473</td>\n",
+       "      <td>8.24730</td>\n",
        "      <td>Brexit means Brexit? Ein Symposium</td>\n",
        "      <td>2017</td>\n",
        "      <td>2017-12-01</td>\n",
@@ -436,7 +436,7 @@
        "      <td>Lancaster</td>\n",
        "      <td>UK</td>\n",
        "      <td>54.0098</td>\n",
-       "      <td>-2.7875</td>\n",
+       "      <td>-2.78750</td>\n",
        "      <td>BAAL Corpus Linguistics SIG Workshop</td>\n",
        "      <td>2019</td>\n",
        "      <td>2019-11-01</td>\n",
@@ -448,7 +448,7 @@
        "      <td>Grenoble</td>\n",
        "      <td>France</td>\n",
        "      <td>45.1885</td>\n",
-       "      <td>5.7245</td>\n",
+       "      <td>5.72450</td>\n",
        "      <td>Advanced Language Processing Winter School</td>\n",
        "      <td>2021</td>\n",
        "      <td>2021-01-01</td>\n",
@@ -460,7 +460,7 @@
        "      <td>Lancaster</td>\n",
        "      <td>UK</td>\n",
        "      <td>54.0098</td>\n",
-       "      <td>-2.7875</td>\n",
+       "      <td>-2.78750</td>\n",
        "      <td>Machine Learning for Humanists</td>\n",
        "      <td>2021</td>\n",
        "      <td>2021-06-01</td>\n",
@@ -472,7 +472,7 @@
        "      <td>Limerick</td>\n",
        "      <td>Ireland</td>\n",
        "      <td>52.6638</td>\n",
-       "      <td>-8.6267</td>\n",
+       "      <td>-8.62670</td>\n",
        "      <td>CL 2021</td>\n",
        "      <td>2021</td>\n",
        "      <td>2021-07-01</td>\n",
@@ -484,7 +484,7 @@
        "      <td>Cambridge</td>\n",
        "      <td>UK</td>\n",
        "      <td>52.2055</td>\n",
-       "      <td>0.1210</td>\n",
+       "      <td>0.12100</td>\n",
        "      <td>ICAME 43</td>\n",
        "      <td>2022</td>\n",
        "      <td>2022-07-01</td>\n",
@@ -496,7 +496,7 @@
        "      <td>London</td>\n",
        "      <td>UK</td>\n",
        "      <td>51.5074</td>\n",
-       "      <td>-0.1278</td>\n",
+       "      <td>-0.12780</td>\n",
        "      <td>CHIMED-3</td>\n",
        "      <td>2023</td>\n",
        "      <td>2023-05-01</td>\n",
@@ -508,7 +508,7 @@
        "      <td>Lancaster</td>\n",
        "      <td>UK</td>\n",
        "      <td>54.0098</td>\n",
-       "      <td>-2.7875</td>\n",
+       "      <td>-2.78750</td>\n",
        "      <td>CL2023</td>\n",
        "      <td>2023</td>\n",
        "      <td>2023-07-01</td>\n",
@@ -520,7 +520,7 @@
        "      <td>Vigo</td>\n",
        "      <td>Spain</td>\n",
        "      <td>42.2407</td>\n",
-       "      <td>-8.7207</td>\n",
+       "      <td>-8.72070</td>\n",
        "      <td>ICAME 45</td>\n",
        "      <td>2024</td>\n",
        "      <td>2024-06-01</td>\n",
@@ -532,7 +532,7 @@
        "      <td>Lancaster</td>\n",
        "      <td>UK</td>\n",
        "      <td>54.0098</td>\n",
-       "      <td>-2.7875</td>\n",
+       "      <td>-2.78750</td>\n",
        "      <td>UCREL NLP Summer School 2024</td>\n",
        "      <td>2024</td>\n",
        "      <td>2024-07-01</td>\n",
@@ -544,7 +544,7 @@
        "      <td>Manchester</td>\n",
        "      <td>UK</td>\n",
        "      <td>53.4630</td>\n",
-       "      <td>-2.2320</td>\n",
+       "      <td>-2.23200</td>\n",
        "      <td>Towards a National Collection Conference</td>\n",
        "      <td>2024</td>\n",
        "      <td>2024-11-01</td>\n",
@@ -556,7 +556,7 @@
        "      <td>Manchester</td>\n",
        "      <td>UK</td>\n",
        "      <td>53.4709</td>\n",
-       "      <td>-2.2953</td>\n",
+       "      <td>-2.29530</td>\n",
        "      <td>BEYOND Conference</td>\n",
        "      <td>2024</td>\n",
        "      <td>2024-11-01</td>\n",
@@ -568,7 +568,7 @@
        "      <td>Lancaster</td>\n",
        "      <td>UK</td>\n",
        "      <td>54.0098</td>\n",
-       "      <td>-2.7875</td>\n",
+       "      <td>-2.78750</td>\n",
        "      <td>Digital Humanities Forum</td>\n",
        "      <td>2024</td>\n",
        "      <td>2024-12-01</td>\n",
@@ -580,7 +580,7 @@
        "      <td>Augsburg</td>\n",
        "      <td>Germany</td>\n",
        "      <td>48.3529</td>\n",
-       "      <td>10.8865</td>\n",
+       "      <td>10.88650</td>\n",
        "      <td>HLT Augsburg Retreat</td>\n",
        "      <td>2025</td>\n",
        "      <td>2025-04-01</td>\n",
@@ -592,7 +592,7 @@
        "      <td>Edge Hill</td>\n",
        "      <td>UK</td>\n",
        "      <td>53.5583</td>\n",
-       "      <td>-2.8692</td>\n",
+       "      <td>-2.86920</td>\n",
        "      <td>Edge Hill Corpus Research Group</td>\n",
        "      <td>2023</td>\n",
        "      <td>2023-12-01</td>\n",
@@ -604,7 +604,7 @@
        "      <td>Glasgow</td>\n",
        "      <td>UK</td>\n",
        "      <td>55.8718</td>\n",
-       "      <td>-4.2882</td>\n",
+       "      <td>-4.28820</td>\n",
        "      <td>Digital Preservation Toolkit for Community Arc...</td>\n",
        "      <td>2025</td>\n",
        "      <td>2025-02</td>\n",
@@ -616,7 +616,7 @@
        "      <td>Birmingham</td>\n",
        "      <td>UK</td>\n",
        "      <td>52.4866</td>\n",
-       "      <td>-1.8901</td>\n",
+       "      <td>-1.89010</td>\n",
        "      <td>CL2025</td>\n",
        "      <td>2025</td>\n",
        "      <td>2025-07</td>\n",
@@ -628,7 +628,7 @@
        "      <td>Bayreuth</td>\n",
        "      <td>Germany</td>\n",
        "      <td>49.9478</td>\n",
-       "      <td>11.5789</td>\n",
+       "      <td>11.57890</td>\n",
        "      <td>CMC</td>\n",
        "      <td>2025</td>\n",
        "      <td>2025-09-03</td>\n",
@@ -640,7 +640,7 @@
        "      <td>Hildesheim</td>\n",
        "      <td>Germany</td>\n",
        "      <td>52.1507</td>\n",
-       "      <td>9.9511</td>\n",
+       "      <td>9.95110</td>\n",
        "      <td>KONVENS</td>\n",
        "      <td>2025</td>\n",
        "      <td>2025-09-09</td>\n",
@@ -652,7 +652,7 @@
        "      <td>Trier</td>\n",
        "      <td>Germany</td>\n",
        "      <td>49.7500</td>\n",
-       "      <td>6.6370</td>\n",
+       "      <td>6.63700</td>\n",
        "      <td>DGfS 2026</td>\n",
        "      <td>2026</td>\n",
        "      <td>2026-02-24</td>\n",
@@ -661,10 +661,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>Konstanz</td>\n",
+       "      <td>Koblenz</td>\n",
        "      <td>Germany</td>\n",
-       "      <td>47.6780</td>\n",
-       "      <td>9.1730</td>\n",
+       "      <td>50.3566</td>\n",
+       "      <td>7.75938</td>\n",
        "      <td>ICAME 47</td>\n",
        "      <td>2026</td>\n",
        "      <td>2026-05-26</td>\n",
@@ -677,29 +677,29 @@
       ],
       "text/plain": [
        "               City    Country  Latitude  Longitude  \\\n",
-       "0   Banyuls-sur-Mer     France   42.4817     3.1317   \n",
-       "1           Vilnius  Lithuania   54.6872    25.2797   \n",
-       "2             Mainz    Germany   49.9929     8.2473   \n",
-       "3         Lancaster         UK   54.0098    -2.7875   \n",
-       "4          Grenoble     France   45.1885     5.7245   \n",
-       "5         Lancaster         UK   54.0098    -2.7875   \n",
-       "6          Limerick    Ireland   52.6638    -8.6267   \n",
-       "7         Cambridge         UK   52.2055     0.1210   \n",
-       "8            London         UK   51.5074    -0.1278   \n",
-       "9         Lancaster         UK   54.0098    -2.7875   \n",
-       "10             Vigo      Spain   42.2407    -8.7207   \n",
-       "11        Lancaster         UK   54.0098    -2.7875   \n",
-       "12       Manchester         UK   53.4630    -2.2320   \n",
-       "13       Manchester         UK   53.4709    -2.2953   \n",
-       "14        Lancaster         UK   54.0098    -2.7875   \n",
-       "15         Augsburg    Germany   48.3529    10.8865   \n",
-       "16        Edge Hill         UK   53.5583    -2.8692   \n",
-       "17          Glasgow         UK   55.8718    -4.2882   \n",
-       "18       Birmingham         UK   52.4866    -1.8901   \n",
-       "19         Bayreuth    Germany   49.9478    11.5789   \n",
-       "20       Hildesheim    Germany   52.1507     9.9511   \n",
-       "21            Trier    Germany   49.7500     6.6370   \n",
-       "22         Konstanz    Germany   47.6780     9.1730   \n",
+       "0   Banyuls-sur-Mer     France   42.4817    3.13170   \n",
+       "1           Vilnius  Lithuania   54.6872   25.27970   \n",
+       "2             Mainz    Germany   49.9929    8.24730   \n",
+       "3         Lancaster         UK   54.0098   -2.78750   \n",
+       "4          Grenoble     France   45.1885    5.72450   \n",
+       "5         Lancaster         UK   54.0098   -2.78750   \n",
+       "6          Limerick    Ireland   52.6638   -8.62670   \n",
+       "7         Cambridge         UK   52.2055    0.12100   \n",
+       "8            London         UK   51.5074   -0.12780   \n",
+       "9         Lancaster         UK   54.0098   -2.78750   \n",
+       "10             Vigo      Spain   42.2407   -8.72070   \n",
+       "11        Lancaster         UK   54.0098   -2.78750   \n",
+       "12       Manchester         UK   53.4630   -2.23200   \n",
+       "13       Manchester         UK   53.4709   -2.29530   \n",
+       "14        Lancaster         UK   54.0098   -2.78750   \n",
+       "15         Augsburg    Germany   48.3529   10.88650   \n",
+       "16        Edge Hill         UK   53.5583   -2.86920   \n",
+       "17          Glasgow         UK   55.8718   -4.28820   \n",
+       "18       Birmingham         UK   52.4866   -1.89010   \n",
+       "19         Bayreuth    Germany   49.9478   11.57890   \n",
+       "20       Hildesheim    Germany   52.1507    9.95110   \n",
+       "21            Trier    Germany   49.7500    6.63700   \n",
+       "22          Koblenz    Germany   50.3566    7.75938   \n",
        "\n",
        "                                                Event  Year        Date  \\\n",
        "0              École thématique d'été « Annotations »  2022  2022-06-01   \n",
@@ -752,7 +752,7 @@
        "22  The 47th Annual Conference of the Internationa...   desired  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "d3b94d8c",
    "metadata": {},
    "outputs": [],
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "74bd0b7a",
    "metadata": {},
    "outputs": [
@@ -914,7 +914,7 @@
            "2026"
           ],
           [
-           "Konstanz, Germany",
+           "Koblenz, Germany",
            "ICAME 47",
            "2026"
           ]
@@ -943,15 +943,15 @@
           "Bayreuth, Germany",
           "Hildesheim, Germany",
           "Trier, Germany",
-          "Konstanz, Germany"
+          "Koblenz, Germany"
          ],
          "lat": {
-          "bdata": "2T15WKg9RUDV52or9ldLQGUZ4lgX/0hAGsBbIEEBS0DjpZvEIJhGQBrAWyBBAUtA24r9ZfdUSkD8qfHSTRpKQMX+snvywElAGsBbIEEBS0DXEvJBzx5FQBrAWyBBAUtAJQaBlUO7SkDc14FzRrxKQBrAWyBBAUtAE2HD0ystSECsrdhfdsdKQI9TdCSX70tA5x2n6Eg+SkAMk6mCUflIQOzAOSNKE0pAAAAAAADgSEAQWDm0yNZHQA==",
+          "bdata": "2T15WKg9RUDV52or9ldLQGUZ4lgX/0hAGsBbIEEBS0DjpZvEIJhGQBrAWyBBAUtA24r9ZfdUSkD8qfHSTRpKQMX+snvywElAGsBbIEEBS0DXEvJBzx5FQBrAWyBBAUtAJQaBlUO7SkDc14FzRrxKQBrAWyBBAUtAE2HD0ystSECsrdhfdsdKQI9TdCSX70tA5x2n6Eg+SkAMk6mCUflIQOzAOSNKE0pAAAAAAADgSEB24JwRpS1JQA==",
           "dtype": "f8"
          },
          "legendgroup": "",
          "lon": {
-          "bdata": "yxDHurgNCUDysFBrmkc5QAKaCBuefiBAzczMzMxMBsDZzvdT4+UWQM3MzMzMTAbAcM6I0t5AIcBg5dAi2/m+P+viNhrAW8C/zczMzMxMBsBUdCSX/3AhwM3MzMzMTAbAQmDl0CLbAcAGEhQ/xlwCwM3MzMzMTAbA2c73U+PFJUAydy0hH/QGwCzUmuYdJxHArrZif9k9/r8OT6+UZSgnQIJzRpT25iNAPzVeukmMGkB/arx0k1giQA==",
+          "bdata": "yxDHurgNCUDysFBrmkc5QAKaCBuefiBAzczMzMxMBsDZzvdT4+UWQM3MzMzMTAbAcM6I0t5AIcBg5dAi2/m+P+viNhrAW8C/zczMzMxMBsBUdCSX/3AhwM3MzMzMTAbAQmDl0CLbAcAGEhQ/xlwCwM3MzMzMTAbA2c73U+PFJUAydy0hH/QGwCzUmuYdJxHArrZif9k9/r8OT6+UZSgnQIJzRpT25iNAPzVeukmMGkAo8iTpmgkfQA==",
           "dtype": "f8"
          },
          "marker": {
@@ -978,7 +978,7 @@
            "#655EC5",
            "#655EC5",
            "#cbd338",
-           "#51e751"
+           "#35eb44"
           ],
           "opacity": 0.55,
           "size": {
@@ -1006,8 +1006,8 @@
         },
         "map": {
          "center": {
-          "lat": 51.20637826086955,
-          "lon": 1.9888347826086956
+          "lat": 51.32283913043478,
+          "lon": 1.9273730434782608
          },
          "domain": {
           "x": [
@@ -1024,8 +1024,8 @@
         },
         "mapbox": {
          "center": {
-          "lat": 51.20637826086955,
-          "lon": 1.9888347826086956
+          "lat": 51.32283913043478,
+          "lon": 1.9273730434782608
          },
          "style": "carto-positron",
          "zoom": 3.2
@@ -1864,6 +1864,14 @@
     "fig.show()\n",
     "fig.write_html(\"conferencemap.html\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f7a8454",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
